--- a/catalogue/compositeurs.html
+++ b/catalogue/compositeurs.html
@@ -11,10 +11,10 @@
     <title>Projet PhP</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -35,7 +35,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">Project PhP</a>
+            <a class="navbar-brand" href="../index.html">Project PhP</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -43,9 +43,9 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Catalogue <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="catalogue/compositeurs.html">Compositeurs</a></li>
-                        <li><a href="catalogue/albums.html">Albums</a></li>
-                        <li><a href="catalogue/enregistrements.html">Enregistrements</a></li>
+                        <li><a href="compositeurs.html">Compositeurs</a></li>
+                        <li><a href="albums.html">Albums</a></li>
+                        <li><a href="enregistrements.html">Enregistrements</a></li>
                     </ul>
                 </li>
                 <li><a href="#contact">A propos</a></li>
@@ -63,7 +63,7 @@
 
     <!-- Main component for a primary marketing message or call to action -->
     <div class="jumbotron">
-        <h1>Accueil</h1>
+        <h1>Compositeurs</h1>
         <p>This example is a quick exercise to illustrate how the default, static and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
         <p>To see the difference between static and fixed top navbars, just scroll.</p>
         <p>
@@ -74,46 +74,46 @@
 </div> <!-- /container -->
 
 <div class="container marketing">
-<!-- START THE FEATURETTES -->
+    <!-- START THE FEATURETTES -->
 
-<hr class="featurette-divider">
+    <hr class="featurette-divider">
 
-<div class="row featurette">
-    <div class="col-md-7">
-        <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+    <div class="row featurette">
+        <div class="col-md-7">
+            <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
+            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        </div>
+        <div class="col-md-5">
+            <img class="featurette-image img-responsive" src="img/lion.png" alt="Generic placeholder image">
+        </div>
     </div>
-    <div class="col-md-5">
-        <img class="featurette-image img-responsive" src="img/lion.png" alt="Generic placeholder image">
-    </div>
-</div>
 
-<hr class="featurette-divider">
+    <hr class="featurette-divider">
 
-<div class="row featurette">
-    <div class="col-md-5">
-        <img class="featurette-image img-responsive" src="img/test.png" alt="Generic placeholder image">
+    <div class="row featurette">
+        <div class="col-md-5">
+            <img class="featurette-image img-responsive" src="img/test.png" alt="Generic placeholder image">
+        </div>
+        <div class="col-md-7">
+            <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
+            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        </div>
     </div>
-    <div class="col-md-7">
-        <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-    </div>
-</div>
 
-<hr class="featurette-divider">
+    <hr class="featurette-divider">
 
-<div class="row featurette">
-    <div class="col-md-7">
-        <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+    <div class="row featurette">
+        <div class="col-md-7">
+            <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
+            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        </div>
+        <div class="col-md-5">
+            <img class="featurette-image img-responsive" src="img/lion.png" alt="Generic placeholder image">
+        </div>
     </div>
-    <div class="col-md-5">
-        <img class="featurette-image img-responsive" src="img/lion.png" alt="Generic placeholder image">
-    </div>
-</div>
 
-<hr class="featurette-divider">
-<!-- /END THE FEATURETTES -->
+    <hr class="featurette-divider">
+    <!-- /END THE FEATURETTES -->
     <!-- FOOTER -->
     <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
