--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Catalogue <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="catalogue/compositeurs.html">Compositeurs</a></li>
+                        <li><a href="catalogue/compositeurs.php">Compositeurs</a></li>
                         <li><a href="catalogue/albums.html">Albums</a></li>
                         <li><a href="catalogue/enregistrements.html">Enregistrements</a></li>
                     </ul>
