--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Catalogue <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
                         <li><a href="catalogue/compositeurs.php">Compositeurs</a></li>
-                        <li><a href="catalogue/albums.html">Albums</a></li>
-                        <li><a href="catalogue/enregistrements.html">Enregistrements</a></li>
+                        <li><a href="catalogue/albums.php">Albums</a></li>
+                        <li><a href="catalogue/enregistrements.php">Enregistrements</a></li>
                     </ul>
                 </li>
                 <li><a href="#contact">A propos</a></li>
