--- a/PHPSite/index.html
+++ b/PHPSite/index.html
@@ -83,7 +83,7 @@
         <img class="featurette-image img-responsive" src="img/e-commerce.jpg" alt="Generic placeholder image">
     </div>
     <div class="col-md-7">
-        <h2 class="featurette-heading">Mais qu'est-ce que le e-commerce ?<span class="text-muted"> Simplicité</span></h2>
+        <h2 class="featurette-heading">Mais qu'est-ce que le e-commerce ? <span class="text-muted">Simplicité</span></h2>
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
     </div>
 </div>
@@ -93,11 +93,11 @@
 
 <div class="row featurette">
     <div class="col-md-7">
-        <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
+        <h2 class="featurette-heading">La musique classique... <span class="text-muted">Mélodieuse</span></h2>
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
     </div>
     <div class="col-md-5">
-        <img class="featurette-image img-responsive" src="img/lion.png" alt="Generic placeholder image">
+        <img class="featurette-image img-responsive" src="img/classique.jpg" alt="Generic placeholder image">
     </div>
 </div>
 
