Modif page d'accueil

--- a/PHPSite/index.html
+++ b/PHPSite/index.html
@@ -81,7 +81,7 @@
     </div>
     <div class="col-md-7">
         <h2 class="featurette-heading">Mais qu'est-ce que le e-commerce ? <span class="text-muted">Simplicité</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <p class="lead">Le e-commerce ou commerce électronique (ou vente à distance, ou encore vente en ligne) désigne l'échange de biens, de services et d'informations entre les réseaux informatiques, notamment Internet.</p>
     </div>
 </div>
 
