essai image acceuil

--- a/PHPSite/index.html
+++ b/PHPSite/index.html
@@ -23,7 +23,7 @@
     <![endif]-->
 </head>
 
-<body background="css/background_clasical.jpg">
+<body background="img/background_clasical.jpg">
 
 <!-- Fixed navbar -->
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
